@@ -294,10 +294,10 @@ LLDSPEC gBool gdisp_lld_init(GDisplay* g) {
 	#endif
 
 	LLDSPEC void gdisp_lld_blit_area(GDisplay* g) {
-		pixel_t*	buffer;
+		gPixel*	buffer;
 		gCoord		ycnt;
 
-		buffer = (pixel_t*)g->p.ptr + g->p.x1 + g->p.y1 * g->p.x2;
+		buffer = (gPixel*)g->p.ptr + g->p.x1 + g->p.y1 * g->p.x2;
 
 		acquire_bus(g);
 		set_viewport(g);
